# spectacular-fsize-bug

./: README.md  pyproject.toml
src/: manage.py
src/foo/: models.py  views.py
src/foo/migrations/: 0001_initial.py
src/spectacularfsizebug/: asgi.py  settings.py  urls.py  wsgi.py
